--- a/styleac.css
+++ b/styleac.css
@@ -13,6 +13,7 @@ body {
   --white: #f5f5f5;
   --pill: #e0d4be;
   --red: #cc033f;
+  background-color: #3D3E42;
 }
 
 ul {
@@ -139,9 +140,10 @@ article {
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: center;
+  /* background-position: right; */
   background-repeat: no-repeat;
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  
 }
 .store {
   height: 130px;
@@ -153,35 +155,35 @@ height: 59px;
 }
 
 .hi-1 {
-  background-image: url("images/ac1.png");
+  background-image: url("images/a1.png");
 }
 
 /* Photo by Lucas Favre
    https://unsplash.com/photos/BRTV55ErUZg
 ----------------------------------------------- */
 .hi-2 {
-  background-image: url("images/ac2.png");
+  background-image: url("images/a2.png");
 }
 
 /* Photo by Roell de Ram
    https://unsplash.com/photos/2DM7eOR5iyc
 ----------------------------------------------- */
 .hi-3 {
-  background-image: url("images/ac3.png");
+  background-image: url("images/a3.png");
 }
 
 /* Photo by Go to Bernd Wahlbrinck
    https://unsplash.com/photos/lVVvYiR66kw
 ----------------------------------------------- */
 .hi-4 {
-  background-image: url("images/ac4.png");
+  background-image: url("images/a4.png");
 }
 
 /* Photo by Micheal Schofield
    https://unsplash.com/photos/d0ohwP3BRf4
 ----------------------------------------------- */
 .hi-5 {
-  background-image: url("images/ac5.png");
+  background-image: url("images/a5.png");
 }
 
 /*  SECTION: Overlay Menu Section
