--- a/styleh.css
+++ b/styleh.css
@@ -13,6 +13,7 @@ body {
   --white: #f5f5f5;
   --pill: #e0d4be;
   --red: #cc033f;
+  background-color: #3D3E42;
 }
 
 ul {
@@ -139,9 +140,10 @@ article {
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: center;
+  /* background-position: right; */
   background-repeat: no-repeat;
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  
 }
 .store {
   height: 130px;
@@ -153,35 +155,35 @@ height: 59px;
 }
 
 .hi-1 {
-  background-image: url("images/h1.png");
+  background-image: url("images/a1.png");
 }
 
 /* Photo by Lucas Favre
    https://unsplash.com/photos/BRTV55ErUZg
 ----------------------------------------------- */
 .hi-2 {
-  background-image: url("images/h2.png");
+  background-image: url("images/a2.png");
 }
 
 /* Photo by Roell de Ram
    https://unsplash.com/photos/2DM7eOR5iyc
 ----------------------------------------------- */
 .hi-3 {
-  background-image: url("images/h3.png");
+  background-image: url("images/a3.png");
 }
 
 /* Photo by Go to Bernd Wahlbrinck
    https://unsplash.com/photos/lVVvYiR66kw
 ----------------------------------------------- */
 .hi-4 {
-  background-image: url("images/h4.png");
+  background-image: url("images/a4.png");
 }
 
 /* Photo by Micheal Schofield
    https://unsplash.com/photos/d0ohwP3BRf4
 ----------------------------------------------- */
 .hi-5 {
-  background-image: url("images/h5.png");
+  background-image: url("images/a5.png");
 }
 
 /*  SECTION: Overlay Menu Section
@@ -278,8 +280,11 @@ section {
   nav {
     padding: 1em 2em;
   }
+  nav img {
+    height: 50px;
+  }
   nav h1 {
-    font-size: 0.9rem;
+    font-size: 0.5rem;
   }
   section {
     padding: 8em 2em 2em 2em;
@@ -303,4 +308,78 @@ section {
     grid-column: 1/2;
     grid-row: 4/5;
   }
+  .hi-1 {
+      background-image: url("images/aa1.png");    
+    background-size: 700px;
+    /* margin-top: 100px; */
+    margin-right: 200px;
+  }
+  .hi-2 {
+    background-image: url("images/aa2.png");    
+    background-size: 700px;
+    /* margin-top: 100px; */
+    margin-right: 200px;
+  } .hi-3 {
+    background-image: url("images/aa3.png");    
+    background-size: 700px;
+    /* margin-top: 100px; */
+    margin-right: 200px;
+  } .hi-4 {
+    background-image: url("images/aa4.png");    
+    background-size: 700px;
+    /* margin-top: 100px; */
+    margin-right: 200px;
+  }
+  .hi-5 {
+    background-image: url("images/aa5.png");    
+    background-size: 700px;
+    /* margin-top: 100px; */
+    margin-right: 200px;
+  }
+  .hero-image {
+ 
+    background-size: none;
+    background-position: none;
+
+  }
+  .sof {
+  height: 80px;
+  width: 80px;
+}
+.hero-info h2 {
+  font-size: clamp(1rem, 6vw, 3rem);
+  line-height: clamp(1rem, 6vw, 3rem);
+  text-transform: uppercase;
+}
+.hero-info h1 {
+  color: var(--white);
+  font-size: clamp(1.2rem, 6vw, 3rem);
+  line-height: clamp(1.2rem, 60vw, 3rem);
+  text-transform: uppercase;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+}
+.hero-info h3 {
+  color: var(--white);
+  font-size: 1rem;
+  font-weight: normal;
+  margin-top: 0em;
+}
+.hero-info h4 {
+  /* margin-top: 240px; */
+  display: flex;
+  align-items: center
+  
+}
+.store {
+  height: 90px;
+}
+.A {
+  height: 38px;
+  margin-top: 7px;
+  margin-left: 20px;
+}
+.hero-info {
+  top: 80%;
+  left: 20%;
+}
 }
